<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">TimeOwner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Channel</string>
    <string name="title_notifications">Information</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Target behavior部分 -->
    <string name="calendar_scolling_behavior" translatable="false" >com.example.timeowner.target.behavior.CalendarScrollBehavior</string>
    <string name="calendar_behavior" translatable="false" >com.example.timeowner.target.behavior.CalendarBehavior</string>

    <string name="name_label">Please input your user name</string>
    <string name="account_label">Please input your account</string>
    <string name="psw_label">Please Input your password</string>
    <string name="confirm_psw_label">Confirm the password again</string>
    <string name="captcha_label">Please enter the verification code</string>
    <string name="forget_psw">Forget password?</string>
    <string name="button_to_login">Log in</string>
    <string name="button_to_register">Register</string>
    <string name="button_to_return">Return to log in</string>
    <string name="no_login_text">Not logged in</string>
    <string name="method_to_login">Click your avatar to sign in</string>
    <string name="chang_account">Change account</string>
    <string name="exit_label">Close</string>
    <string name="time_format">Welcome to join TimeOwner for 15 days</string>
    <string name="recent_channel">Recent channel</string>
    <string name="welcome_text">Welcome to TimeOwner！</string>
    <string name="encourage_text">Without a record, it didn\'t happen!</string>
    <string name="email_label" >Please input your email</string>
    <string name="get_email_code">Get the reset code</string>
    <string name="reset_code_label">Enter the reset code</string>
    <string name="submit">Submit</string>
    <string name="reset_psw_label">Please reset your password</string>
    <string name="remember_psw">Remember password</string>
    <string name="take_photo_label">Camera</string>
    <string name="open_album_label">Open Files</string>
    <string name="cancel_label">Cancel</string>
    <string name="chang_information">Change information</string>
    <string name="id_label">Account</string>
    <string name="information_name_label">Nickname</string>
    <string name="information_email_label">Email</string>
    <string name="information_profile_label">Avatar</string>
    <string name="save_label">Save changes</string>
    <string name="ca_label">A verification code has been sent to: </string>
    <string name="cap_label">Get verification code</string>
    <string name="change_email_new">Please input your new Email</string>
    <string name="confirm_change">Replace the binding</string>
    <string name="target">Target</string>
    <string name="course_table">Course Table</string>
    <string name="concentration">Concentration</string>
    <string name="events">Events</string>
    <string name="happiness">Happiness</string>
    <string name="manage_your_time">——Manage Your Time</string>
</resources>