<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".login.ForgetPasswordActivity">
    <EditText
        android:id="@+id/forget_account_entry"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:hint="@string/account_label"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <EditText
            android:id="@+id/code_entry"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="0dp"
            android:background="@drawable/shape"
            android:hint="@string/reset_code_label" />

        <Button
            android:id="@+id/button_to_get_reset_code"
            android:layout_width="300dp"
            android:layout_marginEnd="0dp"
            android:layout_height="58dp"
            android:text="@string/get_email_code"
            android:layout_marginTop="5dp"
            />

    </LinearLayout>
    <EditText
        android:id="@+id/reset_psw_entry"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:inputType="textPassword"
        android:hint="@string/reset_psw_label"/>
    <EditText
        android:id="@+id/reset_psw_confirm_entry"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:inputType="textPassword"
        android:hint="@string/confirm_psw_label"/>
    <Button
        android:id="@+id/button_to_submit"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/submit" />
    <Button
        android:id="@+id/button_to_return_login"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/button_to_return"/>




</LinearLayout>