<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".information.ChangeEmailActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ca_label"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"/>
    <TextView
        android:id="@+id/change_email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000000"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/change_captcha_entry"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape"
            android:hint="@string/captcha_label" />

        <Button
            android:id="@+id/change_send_captcha"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/cap_label"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"/>
    </LinearLayout>
    <EditText
        android:id="@+id/change_email_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:layout_margin="20dp"
        android:hint="@string/change_email_new"/>
    <Button
        android:id="@+id/confirm_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_change"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>




</LinearLayout>