<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.LoginActivity"
    android:background="#FFFFFF">
    <ImageView
        android:id="@+id/login_logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_label"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/login_account_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:maxLines="1" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_psw_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psw_label"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/login_psw_entry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:maxLines="1"
            android:inputType="textPassword"/>

    </LinearLayout>
    <TextView
        android:id="@+id/forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_psw"
        android:layout_gravity="end"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_to_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/button_to_login" />

        <Button
            android:id="@+id/button_to_go_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/button_to_register" />
    </LinearLayout>

</LinearLayout>