<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">
        <com.example.timeowner.information.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:src="@drawable/robot"
            android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_login_text"
                android:textColor="@color/grey2"
                android:textSize="18sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:visibility="invisible"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/split"/>
            <TextView
                android:id="@+id/account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click on the avatar to log in"
                android:textSize="18sp"
                android:textColor="@color/grey2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:visibility="invisible"/>

            <LinearLayout
                android:id="@+id/account_manager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:visibility="invisible">
                <TextView
                    android:id="@+id/exit_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_label"
                    android:textColor="#3F51B5"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp" />
                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:background="@color/blue" />
                <TextView
                    android:id="@+id/chang_account_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chang_account"
                    android:textColor="#3F51B5"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="15dp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/split"/>
    <Button
        android:id="@+id/time_record"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/welcome_text"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textAllCaps="false"
        android:padding="10dp"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/split"/>
    <Button
        android:id="@+id/channel_record"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/encourage_text"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAllCaps="false"
        android:visibility="invisible"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@drawable/split"/>
    <Button
        android:id="@+id/chang_information"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/chang_information"
        android:padding="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textAllCaps="false"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_alignParentRight="true"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:orientation="horizontal" />
</LinearLayout>
