<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".information.ChangeInformationActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_label"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/information_account_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text=""
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_name_label"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/information_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/shape"
            android:text=""
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_email_label"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/information_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:text=""
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/enter"/>

    </RelativeLayout>
    <Button
        android:id="@+id/save_information"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/save_label"
        android:layout_margin="20dp"
        />



</LinearLayout>